Update README.md 참고 블로그 분리

--- a/til/0. 기타.md
+++ b/til/0. 기타.md
@@ -1,3 +1,7 @@
+# 기타
+
+## 오류 사항
+
 ### 1-5. JPA와 DB 설정, 동작 확인 MemberRepositoryTest 실행 오류
 
 Junit4 내 스프링 2.5.1 은 디폴트로 Junit5 을 설치해준다. 강의에서는 JUnit4를 사용하니 따로 추가해주어야 한다.
@@ -31,3 +35,10 @@ hibernate를 찾지 못하는 에러인것 같은데...
     * 생략해도 상관 없지만 그냥 추가해 주었는데 생략과 표기가 큰 차이가 있는 듯 하다.
 
 `MemberRepositoryTest`코드를 실행하려면 H2 데이터베이스에 연결을 시킨 후에 실행해야 정상적으로 테스트를 통과할 수 있다.
+
+## 참고 블로그
+
+* [@SpringBootTest로 통합 테스트 하기](https://goddaehee.tistory.com/211)
+* [JPA 영속성 컨텍스트 특징](https://victorydntmd.tistory.com/207)
+* [JPA 상속관계 매핑](https://hyeooona825.tistory.com/90)
+* [JPA 고급 매핑 - 일대일, 일대다, 다대다 매핑](http://wonwoo.ml/index.php/post/834)
