--- a/til/0. 기타.md
+++ b/til/0. 기타.md
@@ -42,3 +42,4 @@ hibernate를 찾지 못하는 에러인것 같은데...
 * [JPA 영속성 컨텍스트 특징](https://victorydntmd.tistory.com/207)
 * [JPA 상속관계 매핑](https://hyeooona825.tistory.com/90)
 * [JPA 고급 매핑 - 일대일, 일대다, 다대다 매핑](http://wonwoo.ml/index.php/post/834)
+* [JPA 객체 지향 쿼리, JPQL](https://ict-nroo.tistory.com/116)
