7-1. 홈 화면과 레이아웃

--- a/til/0. 기타.md
+++ b/til/0. 기타.md
@@ -36,6 +36,15 @@ hibernate를 찾지 못하는 에러인것 같은데...
 
 `MemberRepositoryTest`코드를 실행하려면 H2 데이터베이스에 연결을 시킨 후에 실행해야 정상적으로 테스트를 통과할 수 있다.
 
+### 7-1. 홈 화면과 레이아웃
+
+부트스트랩5 에서 Jumbotron 기능을 지원하지 않아서 화면의 레이아웃이 Jumbotron의 설정대로 이동하지 않는다.
+
+[부트스트랩5 점보트론 변경 정보](https://getbootstrap.com/docs/5.0/migration/#jumbotron)
+혹은 그냥 부스트랩4를 다운 받는것이 더 확실할 것 같다. (화면이 중요한 것이 아니므로...)
+
+[다운로드 없이 cdn으로 적용하기](https://www.inflearn.com/questions/151764)
+
 ## 참고 블로그
 
 * [@SpringBootTest로 통합 테스트 하기](https://goddaehee.tistory.com/211)
