7-7. 변경 감지와 병합(merge) Update README.md

--- a/til/0. 기타.md
+++ b/til/0. 기타.md
@@ -53,3 +53,4 @@ hibernate를 찾지 못하는 에러인것 같은데...
 * [JPA 고급 매핑 - 일대일, 일대다, 다대다 매핑](http://wonwoo.ml/index.php/post/834)
 * [JPA 객체 지향 쿼리, JPQL](https://ict-nroo.tistory.com/116)
 * [Thymeleaf 기본 문법](https://eblo.tistory.com/55)
+* [SpringBoot Test - 단위 테스드(@WebMvcTest, @DataJpaTest, @RestClientTest)](https://goddaehee.tistory.com/212)
